fixed header showing projects in center on small screen-size

--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -1,6 +1,6 @@
 .projects-main {
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 .basic-projects {
